@@ -2,6 +2,8 @@ Revision history for Perl extension Wx.
 
 0.9912 TBR
     - wrapped wxListCtrl::SetItemPtrData
+    - updated to use sv_magicext / mg_findext so
+      external modules do not stomp on our magic
 
 0.9911 Fri Aug 24 2012
     - wxDataView - updated for 2.9.4
